--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'groovy'
 project.ext {
   VERSION="0.0.1"
   STAGE="build/stage/graxxia-$VERSION"
+  GROOVY_VERSION="2.4.5"
 }
 
 repositories {
@@ -14,14 +15,15 @@ configurations {
 }
 
 dependencies {
-     groovy group: 'org.codehaus.groovy', name: 'groovy', version: '2.3.11'
-     groovy group: 'org.apache.ivy', name:'ivy', version:'2.2.0' 
-     groovy 'com.lowagie:itext:2.1.7'
-     groovy 'org.apache.commons:commons-math3:3.5'
-     groovy 'junit:junit:4.4'
-     groovy 'commons-cli:commons-cli:1.1'
-     groovy 'com.xlson.groovycsv:groovycsv:1.0'
-     groovy 'log4j:log4j:1.2.17'
+     compile "org.codehaus.groovy:groovy-all:$GROOVY_VERSION"
+     compile group: 'org.codehaus.groovy', name: 'groovy', version: "$GROOVY_VERSION"
+     compile group: 'org.apache.ivy', name:'ivy', version:'2.2.0' 
+     compile 'com.lowagie:itext:2.1.7'
+     compile 'org.apache.commons:commons-math3:3.5'
+     compile 'junit:junit:4.4'
+     compile 'commons-cli:commons-cli:1.1'
+     compile 'com.xlson.groovycsv:groovycsv:1.0'
+     compile 'log4j:log4j:1.2.17'
      compile files(fileTree(dir:'lib', includes:['*.jar']))
 }
 
