--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'groovy'
 apply plugin: 'java'
 
-sourceSets.main.java.srcDirs = []
-sourceSets.main.groovy.srcDirs += ["src/main/java"]
+sourceSets.main.java.srcDirs += ["src/main/java"]
+sourceSets.main.groovy.srcDirs += ["src/main/groovy"]
 
 project.ext {
   VERSION="0.0.1"
