--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
      compile group: 'org.apache.ivy', name:'ivy', version:'2.2.0' 
      compile 'com.lowagie:itext:2.1.7'
      compile 'org.apache.commons:commons-math3:3.5'
+     compile group: 'com.github.haifengl', name: 'smile-core', version: '1.5.2'
      compile 'junit:junit:4.4'
      compile 'commons-cli:commons-cli:1.4'
      compile 'com.xlson.groovycsv:groovycsv:1.0'
