--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,22 @@ dependencies {
      compile group: 'org.apache.ivy', name:'ivy', version:'2.2.0' 
      compile 'com.lowagie:itext:2.1.7'
      compile 'org.apache.commons:commons-math3:3.5'
-     compile group: 'com.github.haifengl', name: 'smile-core', version: '1.5.2'
+
+     // compile group: 'com.github.haifengl', name: 'smile-core', version: '1.5.2'
+     // compile group: 'com.github.haifengl', name: 'smile-plot', version: '1.5.2'
+
+     compile group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
+     
+     compile group: 'org.ejml', name: 'ejml-core', version: '0.38'
+     compile group: 'org.ejml', name: 'ejml-ddense', version: '0.38'
+     
+     
+//      compile group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2'
+//     compile group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2', ext: 'pom'
+     
+     
+//      compile group: 'com.github.fommil', name: 'jniloader', version: '1.1'     
+
      compile 'junit:junit:4.4'
      compile 'commons-cli:commons-cli:1.4'
      compile 'com.xlson.groovycsv:groovycsv:1.0'
