--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
      compile 'com.lowagie:itext:2.1.7'
      compile 'org.apache.commons:commons-math3:3.5'
 
-     // compile group: 'com.github.haifengl', name: 'smile-core', version: '1.5.2'
+     compile group: 'com.github.haifengl', name: 'smile-core', version: '1.5.2'
      // compile group: 'com.github.haifengl', name: 'smile-plot', version: '1.5.2'
 
      compile group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
@@ -48,7 +48,7 @@ dependencies {
 
 // Bundle all dependencies into output library
 jar {
-    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    from configurations.compile.grep { !it.name.endsWith('.pom') }.collect { println(it.name); (it.isDirectory() && !it.name.endsWith('pom')) ? it : zipTree(it) }
     exclude "groovy/**"
     exclude "org/codehaus/**"
     exclude "META-INF/groovy*"
