--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
      compile 'com.lowagie:itext:2.1.7'
      compile 'org.apache.commons:commons-math3:3.5'
 
-     compile group: 'com.github.haifengl', name: 'smile-core', version: '1.5.2'
+     compile group: 'com.github.haifengl', name: 'smile-core', version: '2.2.2'
+     compile group: 'com.github.haifengl', name: 'smile-math', version: '2.2.2'
      // compile group: 'com.github.haifengl', name: 'smile-plot', version: '1.5.2'
 
      compile group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
@@ -33,8 +34,8 @@ dependencies {
      compile group: 'org.ejml', name: 'ejml-ddense', version: '0.38'
      
      
-//      compile group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2'
-//     compile group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2', ext: 'pom'
+      compile group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2'
+     compile group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2', ext: 'pom'
      
      
 //      compile group: 'com.github.fommil', name: 'jniloader', version: '1.1'     
