--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,10 @@ dependencies {
      compile 'com.lowagie:itext:2.1.7'
      compile 'org.apache.commons:commons-math3:3.5'
 
-     compile group: 'com.github.haifengl', name: 'smile-core', version: '2.2.2'
-     compile group: 'com.github.haifengl', name: 'smile-math', version: '2.2.2'
+     compile group: 'com.github.haifengl', name: 'smile-core', version: '2.4.0'
+     compile group: 'com.github.haifengl', name: 'smile-math', version: '2.4.0'
+     compile group: 'com.github.haifengl', name: 'smile-netlib', version: '2.4.0'
+     compile group: 'com.github.haifengl', name: 'smile-data', version: '2.4.0'
      // compile group: 'com.github.haifengl', name: 'smile-plot', version: '1.5.2'
 
      compile group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
