--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
      compile group: 'com.github.haifengl', name: 'smile-data', version: '2.4.0'
      // compile group: 'com.github.haifengl', name: 'smile-plot', version: '1.5.2'
 
-     compile group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
+     // compile group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
      
      compile group: 'org.ejml', name: 'ejml-core', version: '0.38'
      compile group: 'org.ejml', name: 'ejml-ddense', version: '0.38'
