--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ sourceSets.main.groovy.srcDirs += ["src/main/java"]
 project.ext {
   VERSION="0.0.1"
   STAGE="build/stage/graxxia-$VERSION"
+  SMILE_VERSION='2.6.0'
 }
 
 repositories {
@@ -24,10 +25,10 @@ dependencies {
      compile 'com.lowagie:itext:2.1.7'
      compile 'org.apache.commons:commons-math3:3.5'
 
-     compile group: 'com.github.haifengl', name: 'smile-core', version: '2.4.0'
-     compile group: 'com.github.haifengl', name: 'smile-math', version: '2.4.0'
+     compile group: 'com.github.haifengl', name: 'smile-core', version: SMILE_VERSION
+     compile group: 'com.github.haifengl', name: 'smile-math', version: SMILE_VERSION
      compile group: 'com.github.haifengl', name: 'smile-netlib', version: '2.4.0'
-     compile group: 'com.github.haifengl', name: 'smile-data', version: '2.4.0'
+     compile group: 'com.github.haifengl', name: 'smile-data', version: SMILE_VERSION
      // compile group: 'com.github.haifengl', name: 'smile-plot', version: '1.5.2'
 
      // compile group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
