--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,20 @@ project.ext {
 
 repositories {
     mavenCentral()
+    maven {
+      name "ImageJ" 
+      url "http://maven.imagej.net/content/repositories/public/"
+    }
+	
 }
 
 configurations {
   compile
 }
+
+println "*"*80
+println "Building for Groovy $GROOVY_VERSION"
+println "*"*80
 
 dependencies {
      compile "org.codehaus.groovy:groovy-all:$GROOVY_VERSION"
@@ -40,7 +49,8 @@ dependencies {
       compile group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2'
      compile group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2', ext: 'pom'
      
-     
+     implementation group: 'com.github.jupyter', name: 'jvm-repr', version: '0.4.0'
+	 
 //      compile group: 'com.github.fommil', name: 'jniloader', version: '1.1'     
 
      compile 'junit:junit:4.4'
