--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,7 @@ project.ext {
 
 repositories {
     mavenCentral()
-    maven {
-      name "ImageJ" 
-      url "http://maven.imagej.net/content/repositories/public/"
-    }
-	
+    maven { url 'https://jitpack.io' }
 }
 
 configurations {
@@ -50,7 +46,7 @@ dependencies {
      compile group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2'
      compile group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2', ext: 'pom'
      
-     implementation group: 'com.github.jupyter', name: 'jvm-repr', version: '0.4.0'
+     implementation 'com.github.jupyter:jvm-repr:0.4.0'
 	 
 //      compile group: 'com.github.fommil', name: 'jniloader', version: '1.1'     
 
