--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,10 @@ dependencies {
      compile 'commons-cli:commons-cli:1.4'
      compile 'com.xlson.groovycsv:groovycsv:1.3'
      compile group:'org.slf4j', name:'slf4j-jdk14', version: '1.7.5'            
+     
+     compile 'net.sf.py4j:py4j:0.10.9.7'
+     
+     
      // compile 'log4j:log4j:1.2.17'
      compile files(fileTree(dir:'lib', includes:['*.jar']))
 }
