--- a/build.gradle
+++ b/build.gradle
@@ -24,44 +24,44 @@ println "Building for Groovy $GROOVY_VERSION"
 println "*"*80
 
 dependencies {
-     compile "org.codehaus.groovy:groovy-all:$GROOVY_VERSION"
-     compile group: 'org.codehaus.groovy', name: 'groovy', version: "$GROOVY_VERSION"
-     compile group: 'org.codehaus.groovy', name: 'groovy-cli-commons', version: "$GROOVY_VERSION"
-     compile group: 'org.apache.ivy', name:'ivy', version:'2.2.0' 
-     compile 'com.lowagie:itext:2.1.7'
-     compile 'org.apache.commons:commons-math3:3.5'
+     implementation "org.codehaus.groovy:groovy-all:$GROOVY_VERSION"
+     implementation group: 'org.codehaus.groovy', name: 'groovy', version: "$GROOVY_VERSION"
+     implementation group: 'org.codehaus.groovy', name: 'groovy-cli-commons', version: "$GROOVY_VERSION"
+     implementation group: 'org.apache.ivy', name:'ivy', version:'2.2.0' 
+     implementation 'com.lowagie:itext:2.1.7'
+     implementation 'org.apache.commons:commons-math3:3.5'
 
-     compile group: 'com.github.haifengl', name: 'smile-core', version: SMILE_VERSION
-     compile group: 'com.github.haifengl', name: 'smile-math', version: SMILE_VERSION
-     compile group: 'com.github.haifengl', name: 'smile-netlib', version: '2.4.0'
-     compile group: 'com.github.haifengl', name: 'smile-data', version: SMILE_VERSION
-     // compile group: 'com.github.haifengl', name: 'smile-plot', version: SMILE_VERSION
+     implementation group: 'com.github.haifengl', name: 'smile-core', version: SMILE_VERSION
+     implementation group: 'com.github.haifengl', name: 'smile-math', version: SMILE_VERSION
+     implementation group: 'com.github.haifengl', name: 'smile-netlib', version: '2.4.0'
+     implementation group: 'com.github.haifengl', name: 'smile-data', version: SMILE_VERSION
+     // implementation group: 'com.github.haifengl', name: 'smile-plot', version: SMILE_VERSION
 
-     // compile group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
+     // implementation group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
      
-     compile group: 'org.ejml', name: 'ejml-core', version: '0.38'
-     compile group: 'org.ejml', name: 'ejml-ddense', version: '0.38'
+     implementation group: 'org.ejml', name: 'ejml-core', version: '0.38'
+     implementation group: 'org.ejml', name: 'ejml-ddense', version: '0.38'
      
      
-     compile group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2'
-     compile group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2', ext: 'pom'
+     implementation group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2'
+     implementation group: 'com.github.fommil.netlib', name: 'all', version: '1.1.2', ext: 'pom'
      
      implementation 'com.github.jupyter:jvm-repr:0.4.0'
      
-     compile 'com.github.luben:zstd-jni:1.5.4-2'
+     implementation 'com.github.luben:zstd-jni:1.5.4-2'
 	 
-//      compile group: 'com.github.fommil', name: 'jniloader', version: '1.1'     
+//      implementation group: 'com.github.fommil', name: 'jniloader', version: '1.1'     
 
-     compile 'junit:junit:4.4'
-     compile 'commons-cli:commons-cli:1.4'
-     compile 'com.xlson.groovycsv:groovycsv:1.3'
-     compile group:'org.slf4j', name:'slf4j-jdk14', version: '1.7.5'            
+     implementation 'junit:junit:4.4'
+     implementation 'commons-cli:commons-cli:1.4'
+     implementation 'com.xlson.groovycsv:groovycsv:1.3'
+     implementation group:'org.slf4j', name:'slf4j-jdk14', version: '1.7.5'            
      
-     compile 'net.sf.py4j:py4j:0.10.9.7'
+     implementation 'net.sf.py4j:py4j:0.10.9.7'
      
      
-     // compile 'log4j:log4j:1.2.17'
-     compile files(fileTree(dir:'lib', includes:['*.jar']))
+     // implementation 'log4j:log4j:1.2.17'
+     implementation files(fileTree(dir:'lib', includes:['*.jar']))
 }
 
 // Bundle all dependencies into output library
