--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'groovy'
 apply plugin: 'java'
+//apply plugin: 'maven-publish'
 
 sourceSets.main.java.srcDirs = []
 sourceSets.main.groovy.srcDirs += ["src/main/java"]
@@ -27,8 +28,6 @@ dependencies {
      implementation "org.codehaus.groovy:groovy-all:$GROOVY_VERSION"
      implementation group: 'org.codehaus.groovy', name: 'groovy', version: "$GROOVY_VERSION"
      implementation group: 'org.codehaus.groovy', name: 'groovy-cli-commons', version: "$GROOVY_VERSION"
-     implementation group: 'org.apache.ivy', name:'ivy', version:'2.2.0' 
-     implementation 'com.lowagie:itext:2.1.7'
      implementation 'org.apache.commons:commons-math3:3.5'
 
      implementation group: 'com.github.haifengl', name: 'smile-core', version: SMILE_VERSION
@@ -114,7 +113,21 @@ groovydoc {
 
 if (rootProject == project) {
     wrapper {
-        gradleVersion = '5.2.1'
+        gradleVersion = '7.6'
     }
 }
 
+/*
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+
+            groupId = 'org.graxxia'
+            artifactId = 'graxxia'
+            version = '0.9.0'
+        }
+    }
+}
+
+*/
